Add About section styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,28 @@ body {
 /* About
 ================================================ */
 
+.bg-2 {
+    padding: 7% 2% 4% 2%;
+}
 
+.bg-2 span {
+    color: #f4511e;
+    font-size: 20rem;
+    margin-top: 5%;
+}
 
+.bg-2 h4 {
+    margin: 5% 0;
+    line-height: 2.3rem;
+}
+
+.bg-2 button {
+    margin: 3% 0;
+}
+
+.bg-2 p {
+    color: #818181;
+    line-height: 2.4rem;
+}
 
 
