--- a/css/styles.css
+++ b/css/styles.css
@@ -240,3 +240,32 @@ body {
     font-size: 1.2rem;
     margin-bottom: 13%;
 }
+
+.bg-6 {
+    padding: 1% 5% 5% 5%;
+}
+
+/* Contact
+=============================================== */
+
+.bg-7 {
+    background-color: #f6f6f6;
+    padding: 4%;
+}
+
+.bg-7 h2 {
+    text-transform: uppercase;
+    text-align: center;
+    margin: 2% 0 3% 0;
+}
+
+.bg-7 p {
+    color: #818181;
+}
+
+/* Map
+=============================================== */
+
+
+
+
